--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "sequelize": "^6.20.1"
   },
   "devDependencies": {
+    "express": "^4.18.1",
     "nodemon": "^2.0.16",
     "sequelize-cli": "^6.4.1"
   }
