--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "create": "npx sequelize-cli db:create && npx sequelize-cli db:migrate",
-    "drop": "npx sequelize-cli db:drop",
+    "db:reset": "npx sequelize-cli db:drop && npx sequelize-cli db:create && npx sequelize-cli db:migrate && npx sequelize-cli db:seed:all",
     "debug": "nodemon api/server.js"
   },
   "repository": {
