--- a/package.json
+++ b/package.json
@@ -21,8 +21,10 @@
   "dependencies": {
     "cors": "^2.8.5",
     "dotenv": "^16.0.1",
+    "express-async-errors": "^3.1.1",
     "joi": "^17.6.0",
     "jsonwebtoken": "^8.5.1",
+    "md5": "^2.3.0",
     "mysql2": "^2.3.3",
     "sequelize": "^6.20.1"
   },
